<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context="thirty_throws.amho0063.inlupp1_amidala.view.MainActivity">

    <ImageView
        android:id="@+id/dice1ImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/dice5ImageView"
        app:layout_constraintEnd_toStartOf="@+id/dice2ImageView"
        app:srcCompat="@drawable/white1"
        android:contentDescription="@string/dice_1" />

    <ImageView
        android:id="@+id/dice2ImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18"
        app:srcCompat="@drawable/white1"
        android:contentDescription="@string/dice_2" />

    <ImageView
        android:id="@+id/dice3ImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/dice5ImageView"
        app:layout_constraintStart_toEndOf="@+id/dice2ImageView"
        app:srcCompat="@drawable/white1"
        android:contentDescription="@string/dice_3"/>

    <ImageView
        android:id="@+id/dice4ImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toStartOf="@+id/dice2ImageView"
        app:layout_constraintTop_toBottomOf="@+id/dice1ImageView"
        app:srcCompat="@drawable/white1"
        android:contentDescription="@string/dice_4"/>

    <ImageView
        android:id="@+id/dice5ImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toStartOf="@+id/dice3ImageView"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintStart_toEndOf="@+id/dice1ImageView"
        app:layout_constraintTop_toBottomOf="@+id/dice2ImageView"
        app:srcCompat="@drawable/white1"
        android:contentDescription="@string/dice_5"/>

    <ImageView
        android:id="@+id/dice6ImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/dice_6"
        app:layout_constraintStart_toEndOf="@+id/dice2ImageView"
        app:layout_constraintTop_toBottomOf="@+id/dice3ImageView"
        app:srcCompat="@drawable/white1" />

    <TextView
        android:id="@+id/whichThrowTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:shadowColor="#000000"
        android:shadowDx="3.0"
        android:shadowDy="3.0"
        android:shadowRadius="3.0"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:text="@string/which_throw_text"
        app:layout_constraintBottom_toTopOf="@+id/dice1ImageView"
        app:layout_constraintStart_toStartOf="@+id/dice1ImageView" />

    <TextView
        android:id="@+id/whichRoundTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:shadowColor="#000000"
        android:shadowDx="3.0"
        android:shadowDy="3.0"
        android:shadowRadius="3.0"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:text="@string/which_round_text"
        app:layout_constraintBottom_toTopOf="@+id/whichThrowTextView"
        app:layout_constraintStart_toStartOf="@+id/whichThrowTextView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/rollButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:background="@drawable/button_background"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/roll_text_button"
        app:layout_constraintEnd_toStartOf="@+id/dice6ImageView"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toEndOf="@+id/dice4ImageView"
        app:layout_constraintTop_toBottomOf="@+id/dice5ImageView" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="173dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        android:background="@drawable/spinner_background" />

    <TextView
        android:id="@+id/whichDiceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:shadowColor="#000000"
        android:shadowDx="3.0"
        android:shadowDy="3.0"
        android:shadowRadius="3.0"
        android:textStyle="bold"
        android:text="@string/choose_dice_info_text"
        android:visibility="gone"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dice6ImageView"
        app:layout_constraintStart_toEndOf="@+id/dice4ImageView"
        app:layout_constraintTop_toBottomOf="@+id/dice5ImageView"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextRoundButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/next_round_button"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="@+id/whichDiceTextView"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/whichDiceTextView"
        app:layout_constraintTop_toTopOf="@+id/rollButton"
        app:layout_constraintVertical_bias="0.9" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_background_purple"
        android:text="@string/submit_text"
        android:visibility="gone"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/dice6ImageView"
        app:layout_constraintStart_toEndOf="@+id/dice4ImageView"
        app:layout_constraintTop_toBottomOf="@+id/dice5ImageView" />

</androidx.constraintlayout.widget.ConstraintLayout>